--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,50 @@ body{
     background-color: aquamarine;
     margin: 0;
     padding: 0%;
+    width: 100%;
 }
 #welcome-section{
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: antiquewhite;
+    position: relative;
+}
+
+#welcome-section h4{
+    padding: 0px;
+    margin: 0px;
+    color: gray;
     text-align: center;
+    word-spacing: 25px;
+    overflow: hidden;
+    position: absolute;
+    top: 0px;
+    opacity: 40%;
+}
+#welcome-section h1{
     font-family:Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 3px;
-    color: white;
+    color:darksalmon;
+    background-color: antiquewhite;
+    border-radius: 10%;
+    height: 20px;
+    position: absolute;
+    top:30%;
+    left: 15%;
+    
 }
 
 #projects{
     display: flex;
     margin-left: 10px;
-    width: 100%;
+    
 }
 
 .project-tile{
+    margin-top: 20px;
     margin-left: 12px;
     border-color: aqua;
     border-radius: 10%;
