--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body{
     padding-bottom: 100px;
     background-color: antiquewhite;
     position: relative;
-    z-index: -2;
 }
 
 #welcome-section h4{
@@ -20,60 +19,44 @@ body{
     margin: 0px;
     color: gray;
     text-align: center;
-    word-spacing: 30px;
+    word-spacing: 25px;
     overflow: hidden;
     position: absolute;
     top: 0px;
     opacity: 40%;
-    z-index: -1;
 }
 #welcome-section h1{
     font-family:Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 3px;
     color:darksalmon;
-    background-color: white;
-    border-radius: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-width: 3px;
-    border-color: black;
-    border-style: solid;
-    width: fit-content;
-    text-align: center;
+    background-color: antiquewhite;
+    border-radius: 10%;
+    height: 20px;
+    position: absolute;
     top:30%;
-    left: 30%;
-    position: relative;
-    font-size: 3.5rem;
+    left: 15%;
+    
 }
 
 #projects{
     display: flex;
-    background-color: tan;
-    padding-bottom: 20px;
+    margin-left: 10px;
+    
 }
 
 .project-tile{
     margin-top: 20px;
     margin-left: 12px;
+    border-color: aqua;
     border-radius: 10%;
     background-color:bisque;
     padding-bottom:12px;
     padding-left: 12px;
     padding-right: 12px;
-    width: 100%;
-    height: 150px;
+    width: 25%;
+    height: 100px;
     display: grid;
     place-items: center;
-}
-#projects .project-tile:last-of-type{
-    margin-right: 12px;
-}
-.tiramisu-img-bg{
-    background-image: none;
-}
-.tiramisu-img-bg:hover{
-    background-image: url(https://img.freepik.com/free-photo/layered-chocola…mascarpone-cream-generated-by-ai_188544-18033.jpg);
-    background-size: cover;
 }
 .tile-button{
     background-color: azure;
@@ -104,4 +87,8 @@ body{
     gap: 20px;
     
 }
-
+@media (max-width: 992px) {
+  body {
+    background-color: tan;
+  }
+}
