--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,11 @@ body{
 
 #welcome-section{
     margin: 0px;
-    padding-left: 10px;
+    /*padding-left: 10px;
     padding-right: 10px;
     padding-top: 150px;
-    padding-bottom: 160px;
+    padding-bottom: 160px;*/
+    height: 90vh;
     background-color: antiquewhite;
     position: relative;
     z-index: 0;
@@ -65,8 +66,7 @@ body{
 #welcome-section h1{
     font-family:Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 3px;
-    color:darksalmon;
-    background-color: rgb(78, 38, 38);
+    color: grey;
     border-radius: 10px;
     padding-left: 10px;
     padding-right: 10px;
@@ -75,7 +75,7 @@ body{
     border-style: solid;
     width: fit-content;
     text-align: center;
-    top:30%;
+    top:45%;
     position: relative;
     margin: 0 auto;
     font-size: 3.5rem;
@@ -120,12 +120,23 @@ body{
 .macaroon-img-bg{
     background-size: contain;
     background-image: url(https://cdn.pixabay.com/photo/2015/04/20/17/00/pastry-731823_960_720.jpg);
+    background-position: center;
 }
 .brownies-img-bg{
     background-size: cover;
     background-position: center ;
-    opacity:1;
     background-image: url(https://cdn.pixabay.com/photo/2021/09/16/20/45/brownies-6631040_960_720.jpg);
+}
+.croissant-img-bg{
+    background-size: cover;
+    background-image: url(https://cdn.pixabay.com/photo/2021/02/05/14/26/food-5984743_640.jpg);
+    background-position: center;
+}
+.apple-pie-img-bg{
+    background-size: cover;
+    background-image: url(https://cdn.pixabay.com/photo/2023/07/16/02/44/ai-generated-8129967_640.png);
+    background-position: top;
+    color: grey;
 }
 .tile-button{
     background-color: azure;
