--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,12 @@ body{
     background-color:#d5ae7c;
     padding-left: 30px;
     padding-right: 30px;
-    justify-content: space-between;
+    text-align: center;
+    /*justify-content: space-between;*/
     overflow: hidden;
+    background-color: transparent;
+    position: fixed;
+    z-index:  1;
 }
 #navbar h5 {
     color: grey;
@@ -23,6 +27,12 @@ body{
     padding-top: 0.75rem;
     padding-left: 35px;
     padding-right: 35px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition:color 0.3s ease;
+}
+#navbar h5:hover{
+    color: black;
 }
 #navbar ul{
     display:flex;
@@ -30,19 +40,25 @@ body{
     gap: 20px;
     
 }
+#navbar ul a{
+    text-decoration: none;
+    color:#d5ae7c;
+    transition:background-color 0.3s ease;
+    padding:3px;
+}
+#navbar ul a:hover{
+    background-color: aliceblue;
+    border-radius: 5px;
+}
 
 #welcome-section{
     margin: 0px;
-    /*padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 150px;
-    padding-bottom: 160px;*/
     height: 90vh;
     background-color: antiquewhite;
     position: relative;
     z-index: 0;
     overflow: hidden;
-    background-image: url(https://cdn.pixabay.com/photo/2017/07/11/19/41/yellowstone-2494789_960_720.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(https://cdn.pixabay.com/photo/2017/07/11/19/41/yellowstone-2494789_960_720.jpg);
     background-size: cover;
     background-position:center ;
 }
@@ -55,18 +71,18 @@ body{
     word-spacing: 20px;
     position: absolute;
     top: 0px;
-    opacity: 0.5;
-    transition: 0.4s ease;
+    opacity: 1;
     font-size: 22px;
+    overflow: hidden;
 }
 #welcome-section h4 #glow-hover:hover{
     color: white;
     opacity: 1;    
 }
 #welcome-section h1{
-    font-family:Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 3px;
-    color: grey;
+    color: whitesmoke;
     border-radius: 10px;
     padding-left: 10px;
     padding-right: 10px;
@@ -82,13 +98,19 @@ body{
     z-index: 1;
 }
 
-
+.split{
+    background-color: black;
+    width:100vw;
+    height:1rem;
+}
 #projects{
     display: flex;
     background-color: tan;
     padding-bottom: 20px;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(	https://images.pexels.com/photos/1590549/pexels-photo-1590549.jpeg);
+    background-size: cover;
 }
 
 .project-tile{
@@ -107,7 +129,7 @@ body{
 }
 .project-tile:hover{
     color:bisque;
-    font-size: 20px;;
+    font-size: 20px;
 }
 .tiramisu-img-bg{
     background-size:cover;
@@ -125,7 +147,7 @@ body{
 .brownies-img-bg{
     background-size: cover;
     background-position: center ;
-    background-image: url(https://cdn.pixabay.com/photo/2021/09/16/20/45/brownies-6631040_960_720.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)), url(https://cdn.pixabay.com/photo/2021/09/16/20/45/brownies-6631040_960_720.jpg);
 }
 .croissant-img-bg{
     background-size: cover;
