--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,16 @@ body{
     display: flex;
     font-size: 16px;
     background-color:#d5ae7c;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: auto;
+    padding-right: auto;
+    padding-top: 10px;
     text-align: center;
-    /*justify-content: space-between;*/
     overflow: hidden;
     background-color: transparent;
+    width: 100%;
+    justify-content: center;
     position: fixed;
+    flex-wrap: wrap;
     z-index:  1;
 }
 #navbar h5 {
@@ -23,13 +26,13 @@ body{
     font-size: 20px;
     background: radial-gradient(circle, rgba(220,220,220,1) 0%, rgba(212,173,123,1) 100%);
     margin: 0;
-    padding: 0;
-    padding-top: 0.75rem;
+    padding: 10px;
     padding-left: 35px;
     padding-right: 35px;
     border-radius: 20px;
     cursor: pointer;
     transition:color 0.3s ease;
+    justify-content: center;
 }
 #navbar h5:hover{
     color: black;
@@ -38,7 +41,6 @@ body{
     display:flex;
     list-style-type: none;
     gap: 20px;
-    
 }
 #navbar ul a{
     text-decoration: none;
@@ -50,10 +52,17 @@ body{
     background-color: aliceblue;
     border-radius: 5px;
 }
+.fit{
+    display: flex;
+    width: fit-content;
+    padding: 0 3px 0 3px;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
 
+}
 #welcome-section{
     margin: 0px;
-    height: 90vh;
+    height: 100dvh;
     background-color: antiquewhite;
     position: relative;
     z-index: 0;
@@ -96,21 +105,30 @@ body{
     margin: 0 auto;
     font-size: 3.5rem;
     z-index: 1;
+    backdrop-filter: blur(10px);
 }
-
-.split{
-    background-color: black;
-    width:100vw;
-    height:1rem;
+#featured-section{
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(	https://images.pexels.com/photos/1590549/pexels-photo-1590549.jpeg);
+    background-size: cover;
+}
+.featured-collection{
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+    width: fit-content;
+    text-decoration: none;
+    font-weight: bolder;
+    mix-blend-mode: color-burn;
+    padding: 20px 0 20px 0;
+    border-radius: 10px;
+    margin: auto;
+    transition: all 0.3s ease;
 }
 #projects{
     display: flex;
-    background-color: tan;
+    background-color: inherit;
     padding-bottom: 20px;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(	https://images.pexels.com/photos/1590549/pexels-photo-1590549.jpeg);
-    background-size: cover;
 }
 
 .project-tile{
@@ -126,6 +144,7 @@ body{
     display: grid;
     place-items: center;
     transition: 0.4s;
+    
 }
 .project-tile:hover{
     color:bisque;
